# LocalLLMCode

./: .gitignore  CLAUDE.md  FutureFeatureProposals.md  INTELLIGENT_SUGGESTIONS_PLAN.md  LOCALLLM.md  README.md  config.toml.template  localllm.toml  localllm_code_design.md  localllm_readme.md  main.py  test_sample.py
.localllm/agents/: code_reviewer.md
.localllm/commands/: hello.md
.localllm_memory/: metadata.json
Task/: LOCALLLM.md  README_MANY.md  miniapp.md
demo_project/: LOCALLLM.md  README.md  localllm.toml  pyproject.toml  requirements.txt
demo_project/src/: database.py  main.py
demo_project/src/api/: auth.py  users.py
demo_project/src/models/: auth.py  user.py
demo_project/src/services/: auth_service.py  user_service.py
demo_project/tests/: test_users.py
docs/: アプリ紹介文章と説明スライド情報.md  アーキテクチャ図.md  クラス図とシーケンス図.md  基本設計書.md  詳細設計書.md
localllm/: __init__.py
localllm/agents/: __init__.py  multi_agent.py  react_agent.py
localllm/core/: __init__.py  config.py  context_manager.py  file_parser.py  i18n.py  instruction_parser.py  project_dna.py
localllm/intelligence/: __init__.py  code_analyzer.py
localllm/llm/: __init__.py  analyzers.py  clients.py
localllm/memory/: __init__.py  external_memory.py  task_chunking.py
localllm/tools/: __init__.py  tool_system.py
localllm/ui/: __init__.py
templates/javascript/: LOCALLLM.md  localllm.toml
templates/javascript/.localllm/agents/: linter.md
templates/javascript/.localllm/commands/: test.md
templates/python/: LOCALLLM.md  localllm.toml
templates/simple/: LOCALLLM.md  localllm.toml
(+2 files in other folders)
