[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-api"
version = "1.0.0"
description = "Demo FastAPI project"
authors = [
    {name = "LocalLLM Code Demo"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic[email]>=2.5.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
